# agent-panel-orchestrator

./: .gitignore  BRAND.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  panel  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  live-qa.yml  release.yml
.panel/: gates.yaml.example
config/: agents.json
docs/: PRODUCTION.md
npm/: package.json
npm/scripts/: prepack.js
packaging/: RELEASE.md
packaging/homebrew/: README.md  agent-panel-orchestrator.rb
packaging/windows/: install.ps1  panel.cmd
packaging/winget/: Entkreis.AgentPanelOrchestrator.yaml  README.md
panel_core/: audit_loop.py  branding.py  cli.py  config.py  doctor.py  export_rules.py  gates.py  orchestrator.py  paths.py  prompts.py  providers.py  run_contract.py  runs.py  skills.py
panel_core/testing/: fake_runner.py
scripts/: check_version_sync.sh  release.sh  verify_fixtures.sh
skills/audit-loop/: instructions.md  skill.json
skills/audit-loop/evals/: basic.jsonl
skills/code-review/: instructions.md  skill.json
skills/code-review/evals/: basic.jsonl
skills/design/: instructions.md  skill.json
skills/design/evals/: basic.jsonl
skills/research/: instructions.md  skill.json
skills/security/: instructions.md  skill.json
tests/: test_audit_loop.py  test_cli.py  test_doctor.py  test_gates.py  test_orchestrator.py  test_paths.py  test_prompts.py  test_providers.py  test_public_surface.py  test_runs.py  test_skills.py
tests/integration/: test_fixture_audit_loop.py  test_user_journeys.py
(+17 files in other folders)
