[project]
name = "agent-panel-orchestrator"
version = "0.2.0"
description = "Run independent agent panels through Codex, Claude Code, Cursor, and Gemini CLIs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Anthony Batista" }]
keywords = ["agents", "cli", "orchestrator", "codex", "claude", "cursor"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/anthonysbr/agent-panel-orchestrator"
Documentation = "https://github.com/anthonysbr/agent-panel-orchestrator#readme"
Repository = "https://github.com/anthonysbr/agent-panel-orchestrator"

[project.scripts]
panel = "panel_core.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["panel_core"]

[tool.hatch.build.targets.wheel.force-include]
"config" = "panel_core/_bundle/config"
"skills" = "panel_core/_bundle/skills"
"third_party" = "panel_core/_bundle/third_party"

[tool.hatch.build.targets.sdist]
include = [
  "/panel_core",
  "/config",
  "/skills",
  "/third_party",
  "/panel",
  "/tests",
  "/README.md",
  "/pyproject.toml",
]
